# church-pair

./: .travis.yml  CHANGELOG.md  LICENSE  church-pair.cabal
Data/Church/: Pair.hs
