name:                church-pair
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Matthew Harm Bekkema
maintainer:          mbekkema97@gmail.com
bug-reports:         https://github.com/mat8913/church-pair/issues
synopsis:            Church encoded pair
category:            Data
description:
    This package contains a Church encoded 'Pair' type along with appropriate
    instances for typeclasses in 'base'.
cabal-version:       >=1.10
build-type:          Simple

extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/mat8913/church-pair


flag base-48
  description:         Use base-4.8 or higher
  manual:              False
  default:             True

flag base-49
  description:         Use base-4.9 or higher
  manual:              False
  default:             True

library
  default-language:    Haskell98

  other-extensions:    Safe
                       Rank2Types

  if flag(base-49)
    build-depends:     base >= 4.9 && < 5
  else
    if flag(base-48)
      build-depends:   base >= 4.8 && < 5
                     , bifunctors
    else
      build-depends:   base >= 4.5 && < 5
                     , bifunctors
                     , semigroups >= 0.17 && < 1

  exposed-modules:     Data.Church.Pair
  ghc-options:         -Wall
